navigation page not responsive, not interactive

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- <img src="./public/assets/destination/background-destination-mobile.jpg" alt=""> -->
   </body>
 </html>
