--- a/index.html
+++ b/index.html
@@ -12,6 +12,29 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+
+    <!-- {/* -----------grid template------------ */}
+          <div className=" grid-cols-template">
+            {/* -------main grid template 1-------- */}
+            <div className="border border-blue-600">
+              {/* ----pick and image----- */}
+              <div></div>
+              {/* ----end of pick and image----- */}
+            </div>
+            {/* -----end of main grid template 1-----  */}
+
+            {/* -------main grid template 2-------- */}
+            <div className="border border-green-500">
+              {/* --------others-------- */}
+              <div></div>
+              {/* --------end of others-------- */}
+            </div>
+            {/* -------end of main grid template 2-------- */}
+          </div>
+          {/* ------------end of grid template----------- */} -->
+
+
+          
     
   </body>
 </html>
